--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "license": "ISC",
     "devDependencies": {
         "@11ty/eleventy": "^0.12.1",
+        "@sindresorhus/slugify": "^2.1.0",
         "npm-run-all": "^4.1.5",
         "sass": "^1.43.4"
     }
