--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "license": "ISC",
     "devDependencies": {
         "@11ty/eleventy": "^0.12.1",
-        "@sindresorhus/slugify": "^2.1.0",
+        "@sindresorhus/slugify": "^1.1.2",
+        "fs": "^0.0.1-security",
         "npm-run-all": "^4.1.5",
         "sass": "^1.43.4"
     }
