--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "devDependencies": {
         "@11ty/eleventy": "^0.12.1",
         "@sindresorhus/slugify": "^1.1.2",
+        "eleventy-plugin-page-assets": "^0.3.0",
         "fs": "^0.0.1-security",
         "npm-run-all": "^4.1.5",
         "sass": "^1.43.4"
