--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "myxotod.com",
+    "name": "makkusu.dev",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
@@ -13,11 +13,15 @@
     },
     "keywords": [],
     "author": "",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/myxotod/makkusu.dev.git"
+    },
     "license": "ISC",
     "devDependencies": {
         "@11ty/eleventy": "^0.12.1",
         "@sindresorhus/slugify": "^1.1.2",
-        "eleventy-plugin-page-assets": "^0.3.0",
+        "eleventy-plugin-page-assets": "github:maxboeck/eleventy-plugin-page-assets",
         "fs": "^0.0.1-security",
         "npm-run-all": "^4.1.5",
         "sass": "^1.43.4"
