Updated hobbies Added sitemap.xml Copy .htaccess to dist directory on build

--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,6 @@
 ErrorDocument 404 /404.html
+
+<FilesMatch "\.(js|css|html|htm|php|xml)$">
+    SetOutputFilter DEFLATE
+    AddOutputFilterByType DEFLATE text/html text/plain text/xml
+</FilesMatch>
