--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "license": "ISC",
     "devDependencies": {
         "@11ty/eleventy": "^1.0.0",
+        "@11ty/eleventy-plugin-rss": "^1.1.2",
         "@sindresorhus/slugify": "^1.1.2",
         "eleventy-plugin-page-assets": "github:maxboeck/eleventy-plugin-page-assets",
         "fs": "^0.0.1-security",
