--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
         "@11ty/eleventy": "^1.0.0",
         "@11ty/eleventy-plugin-rss": "^1.1.2",
         "@sindresorhus/slugify": "^1.1.2",
+        "del": "^6.0.0",
         "eleventy-plugin-page-assets": "github:maxboeck/eleventy-plugin-page-assets",
         "fs": "^0.0.1-security",
         "npm-run-all": "^4.1.5",
+        "path": "^0.12.7",
         "sass": "^1.43.4"
     }
 }
