--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "watch:eleventy": "npx @11ty/eleventy --serve",
         "build:eleventy": "npx @11ty/eleventy",
         "start": "npm-run-all build:sass --parallel watch:*",
-        "build": "npm-run-all build:*"
+        "build": "npm-run-all build:*",
+        "jshint": "jshint --reporter=node_modules/jshint-stylish src/assets/javascripts/"
     },
     "keywords": [],
     "author": "",
@@ -25,6 +26,8 @@
         "del": "^6.0.0",
         "eleventy-plugin-page-assets": "github:maxboeck/eleventy-plugin-page-assets",
         "fs": "^0.0.1-security",
+        "jshint": "^2.13.4",
+        "jshint-stylish": "^2.2.1",
         "npm-run-all": "^4.1.5",
         "path": "^0.12.7",
         "sass": "^1.43.4"
