--- a/src/.htaccess
+++ b/src/.htaccess
@@ -2,8 +2,9 @@ ErrorDocument 404 /404.html
 
 <IfModule mod_rewrite.c>
   RewriteEngine On
-  RewriteCond %{HTTP_HOST} ^makkusu.dev [NC]
-  RewriteRule ^(.*)$ http://www.makkusu.dev/$1 [L,R=301]
+  RewriteCond %{HTTPS} off [OR]
+  RewriteCond %{HTTP_HOST} !^www\.makkusu\.dev$ [NC]
+  RewriteRule ^(.*)$ https://www.makkusu.dev/$1 [L,R=301]
 </IfModule>
 
 <IfModule mod_expires.c>
