--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
     "del": "^6.0.0",
     "eleventy-plugin-page-assets": "github:maxboeck/eleventy-plugin-page-assets",
+    "html-minifier": "^4.0.0",
     "npm-run-all": "^4.1.5",
     "path": "^0.12.7",
     "sass": "^1.72.0"
