--- a/src/_data/now.json
+++ b/src/_data/now.json
@@ -1,20 +1,26 @@
 {
-  "reading": {
-      "title": "Das Kind in dir muss Heimat finden",
-      "author": "Stefanie Stahl",
-      "url": "https://amzn.eu/d/66381lG"
-  },
-  "listening": {
-      "name": "Hit Sale",
-      "artist": "Therapie TAXI / Roméo Elvis",
-      "url": "https://open.spotify.com/track/3yndKI4zWEyC36BQYrdKBA?si=4864310d5ca3497e"
-  },
-  "watching": {
-      "title": "Midnight Diner: Tokyo Stories",
-      "url": "https://www.imdb.com/title/tt1882928/"
-  },
-  "working": {
-      "company": "Datagroup SE",
-      "url": "https://www.datagroup.de"
-  }
+    "location": {
+        "city": "Mainz",
+        "citylink": "https://maps.app.goo.gl/TQtzrKpFhdgVPSvd8",
+        "doing": "following daily life",
+        "doinglink": null
+    },
+    "reading": {
+        "title": "Das Kind in dir muss Heimat finden",
+        "author": "Stefanie Stahl",
+        "url": "https://amzn.eu/d/66381lG"
+    },
+    "listening": {
+        "name": "NOCTURNE",
+        "artist": "Nina Utashiro",
+        "url": "https://open.spotify.com/intl-de/track/2OzaeZLlOIHXpbV7udgFJC?si=804a967c46ae46a4"
+    },
+    "watching": {
+        "title": "Midnight Diner: Tokyo Stories",
+        "url": "https://www.imdb.com/title/tt1882928/"
+    },
+    "working": {
+        "company": "Datagroup SE",
+        "url": "https://www.datagroup.de"
+    }
 }
