--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "watch:eleventy": "npx @11ty/eleventy --serve",
     "build:eleventy": "npx @11ty/eleventy",
     "start": "npm-run-all build:sass --parallel watch:*",
-    "build": "npm-run-all build:*"
+    "build": "npm-run-all build:*",
+    "test": "npx standard"
   },
   "author": "Maximilian Boll",
   "repository": {
@@ -29,6 +30,7 @@
     "html-minifier": "^4.0.0",
     "npm-run-all": "^4.1.5",
     "path": "^0.12.7",
-    "sass": "^1.72.0"
+    "sass": "^1.72.0",
+    "standard": "^17.1.0"
   }
 }
