--- a/src/_data/now.json
+++ b/src/_data/now.json
@@ -6,9 +6,9 @@
         "doinglink": null
     },
     "reading": {
-        "title": "Das Kind in dir muss Heimat finden",
-        "author": "Stefanie Stahl",
-        "url": "https://amzn.eu/d/66381lG"
+        "title": "Goodbye, Things - On Minimalist Living",
+        "author": "Fumio Sasaki",
+        "url": "https://www.google.com/books/edition/Goodbye_Things/_psIDgAAQBAJ"
     },
     "listening": {
         "name": "NOCTURNE",
