--- a/src/_data/now.json
+++ b/src/_data/now.json
@@ -11,16 +11,16 @@
         "url": "https://www.google.com/books/edition/Goodbye_Things/_psIDgAAQBAJ"
     },
     "listening": {
-        "name": "NOCTURNE",
-        "artist": "Nina Utashiro",
-        "url": "https://open.spotify.com/intl-de/track/2OzaeZLlOIHXpbV7udgFJC?si=804a967c46ae46a4"
+        "name": "It's not fair",
+        "artist": "Kenya Grace",
+        "url": "https://open.spotify.com/intl-de/track/5lK0CKf7HOyuUHBjJncblj?si=826f88ecd74642ea"
     },
     "watching": {
-        "title": "Midnight Diner: Tokyo Stories",
-        "url": "https://www.imdb.com/title/tt1882928/"
+        "title": "Sense8",
+        "url": "https://www.imdb.com/title/tt2431438/"
     },
     "working": {
-        "company": "Datagroup SE",
+        "company": "Datagroup Consulting Services GmbH",
         "url": "https://www.datagroup.de"
     }
 }
