Update now data

--- a/src/_data/now.json
+++ b/src/_data/now.json
@@ -11,13 +11,13 @@
         "url": "https://www.google.com/books/edition/Goodbye_Things/_psIDgAAQBAJ"
     },
     "listening": {
-        "name": "It's not fair",
-        "artist": "Kenya Grace",
-        "url": "https://open.spotify.com/intl-de/track/5lK0CKf7HOyuUHBjJncblj?si=826f88ecd74642ea"
+        "name": "Gasoline",
+        "artist": "yoenkingyo",
+        "url": "https://open.spotify.com/intl-de/track/5wsz2Ie0MWqrtGPkJcDSW2?si=366b87c42d13463b"
     },
     "watching": {
-        "title": "Sense8",
-        "url": "https://www.imdb.com/title/tt2431438/"
+        "title": "West World",
+        "url": "https://www.imdb.com/de/title/tt0475784/"
     },
     "working": {
         "company": "Datagroup Consulting Services GmbH",
