--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -119,14 +119,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Configure SSH
-      uses: webfactory/ssh-agent@v0.9.0
-      with:
-        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-    - name: Install SSH Keys
-      run: |
-        ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
-    - name: Connect To Server and Pull Image
-      run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} -p ${{ secrets.SSH_PORT }} "cd ${{ secrets.WORK_DIR }} && docker compose pull && VERSION=${{ github.event.release.tag_name }} docker compose up -d && exit"
-    - name: Cleanup
-      run: rm -rf ~/.ssh
+      - name: Install SSH Keys
+        run: |
+          install -m 600 -D /dev/null ~/.ssh/id_rsa
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          ssh-keyscan -p ${{ secrets.SSH_PORT }} -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
+      - name: Connect To Server and Pull Image
+        run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} -p ${{ secrets.SSH_PORT }} "cd ${{ secrets.WORK_DIR }} && docker compose pull && TAG_NAME=${{ github.event.release.tag_name }} docker compose up -d && exit"
+      - name: Cleanup
+        run: rm -rf ~/.ssh
+
+      #     - uses: webfactory/ssh-agent@v0.9.0
+      #   with:
+      #     ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+      # - name: Keyscan
+      #   run: ssh-keyscan -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
