--- a/src/.htaccess
+++ b/src/.htaccess
@@ -1,7 +1,7 @@
 ErrorDocument 404 /404.html
 
 <IfModule mod_rewrite.c>
-  RewriteEngine On
+  RewriteEngine Off
   RewriteCond %{HTTPS} off [OR]
   RewriteCond %{HTTP_HOST} !^www\.makkusu\.dev$ [NC]
   RewriteRule ^(.*)$ https://www.makkusu.dev/$1 [L,R=301]
