Updated location now.json

--- a/src/_data/now.json
+++ b/src/_data/now.json
@@ -1,8 +1,8 @@
 {
     "location": {
-        "city": "Mainz",
-        "citylink": "https://maps.app.goo.gl/TQtzrKpFhdgVPSvd8",
-        "doing": "following daily life",
+        "city": "Benalmádena, Spain",
+        "citylink": "https://maps.app.goo.gl/rgPyiiRvnhA3MLYK8",
+        "doing": "enjoying the sun",
         "doinglink": null
     },
     "reading": {
