--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "makkusu.dev",
-  "version": "1.2.9",
+  "version": "2.0.0",
   "description": "Private website of Maximilian Boll",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "watch:sass": "sass --style=compressed --watch src/assets/stylesheets/application.scss:src/assets/stylesheets/application.min.css",
     "build:sass": "sass --style=compressed src/assets/stylesheets/application.scss:src/assets/stylesheets/application.min.css",
     "build:sass:fontawesome": "sass --style=compressed src/assets/stylesheets/fontawesome.scss:src/assets/stylesheets/fontawesome.min.css",
     "watch:eleventy": "npx @11ty/eleventy --serve",
     "build:eleventy": "npx @11ty/eleventy",
-    "start": "npm-run-all build:sass --parallel watch:*",
+    "start1": "npm-run-all build:sass --parallel watch:*",
+    "start": "npx @11ty/eleventy --serve",
     "build": "npm-run-all build:*",
     "test": "npx standard"
   },
@@ -20,17 +22,17 @@
   },
   "license": "ISC",
   "devDependencies": {
-    "@11ty/eleventy": "^2.0.1",
+    "@11ty/eleventy": "^3.1.2",
     "@11ty/eleventy-plugin-inclusive-language": "^1.0.3",
-    "@11ty/eleventy-plugin-rss": "^1.2.0",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
+    "@11ty/eleventy-plugin-rss": "^2.0.4",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.1",
     "@myxotod/eleventy-plugin-readingtime": "^2.0.0",
     "del": "^6.0.0",
     "eleventy-plugin-page-assets": "github:maxboeck/eleventy-plugin-page-assets",
     "html-minifier": "^4.0.0",
+    "lightningcss": "^1.30.1",
     "npm-run-all": "^4.1.5",
     "path": "^0.12.7",
-    "sass": "^1.72.0",
-    "standard": "^17.1.0"
+    "standard": "^17.1.2"
   }
 }
