--- a/package.json
+++ b/package.json
@@ -5,15 +5,10 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "watch:sass": "sass --style=compressed --watch src/assets/stylesheets/application.scss:src/assets/stylesheets/application.min.css",
-    "build:sass": "sass --style=compressed src/assets/stylesheets/application.scss:src/assets/stylesheets/application.min.css",
-    "build:sass:fontawesome": "sass --style=compressed src/assets/stylesheets/fontawesome.scss:src/assets/stylesheets/fontawesome.min.css",
-    "watch:eleventy": "npx @11ty/eleventy --serve",
-    "build:eleventy": "npx @11ty/eleventy",
-    "start1": "npm-run-all build:sass --parallel watch:*",
     "start": "npx @11ty/eleventy --serve",
-    "build": "npm-run-all build:*",
-    "test": "npx standard"
+    "build": "npx @11ty/eleventy",
+    "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
+    "lint": "npx eslint src"
   },
   "author": "Maximilian Boll",
   "repository": {
@@ -29,10 +24,11 @@
     "@myxotod/eleventy-plugin-readingtime": "^2.0.0",
     "del": "^6.0.0",
     "eleventy-plugin-page-assets": "github:maxboeck/eleventy-plugin-page-assets",
+    "eslint": "^9.31.0",
+    "eslint-config-prettier": "^10.1.5",
     "html-minifier": "^4.0.0",
     "lightningcss": "^1.30.1",
-    "npm-run-all": "^4.1.5",
     "path": "^0.12.7",
-    "standard": "^17.1.2"
+    "prettier": "^3.6.2"
   }
 }
