--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "npx @11ty/eleventy --serve",
     "build": "npx @11ty/eleventy",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
-    "lint": "npx eslint src"
+    "lint": "npx eslint src/assets/javascripts"
   },
   "author": "Maximilian Boll",
   "repository": {
@@ -29,6 +29,7 @@
     "html-minifier": "^4.0.0",
     "lightningcss": "^1.30.1",
     "path": "^0.12.7",
-    "prettier": "^3.6.2"
+    "prettier": "^3.6.2",
+    "terser": "^5.43.1"
   }
 }
