--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@11ty/eleventy-plugin-rss": "^2.0.4",
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.1",
     "@myxotod/eleventy-plugin-readingtime": "^2.0.0",
+    "browserslist": "^4.25.1",
     "del": "^6.0.0",
     "eleventy-plugin-page-assets": "github:maxboeck/eleventy-plugin-page-assets",
     "eslint": "^9.31.0",
