Update location and reading information in now.json

--- a/src/_data/now.json
+++ b/src/_data/now.json
@@ -1,14 +1,14 @@
 {
     "location": {
-        "city": "Benalmádena, Spain",
-        "citylink": "https://maps.app.goo.gl/rgPyiiRvnhA3MLYK8",
-        "doing": "enjoying the sun",
+        "city": "Mainz, Germany",
+        "citylink": "https://maps.app.goo.gl/V2ZdN6V9S8nZvpfC9",
+        "doing": "following daily life",
         "doinglink": null
     },
     "reading": {
-        "title": "Goodbye, Things - On Minimalist Living",
-        "author": "Fumio Sasaki",
-        "url": "https://www.google.com/books/edition/Goodbye_Things/_psIDgAAQBAJ"
+        "title": "The Three-Body Problem",
+        "author": "Cixin Liu",
+        "url": "https://www.google.de/books/edition/The_Three_Body_Problem/Z7GfEAAAQBAJ?hl=de&gbpv=0"
     },
     "listening": {
         "name": "Gasoline",
