Update location from Mainz to Tokyo

--- a/src/_data/now.json
+++ b/src/_data/now.json
@@ -1,8 +1,8 @@
 {
     "location": {
-        "city": "Mainz, Germany",
-        "citylink": "https://maps.app.goo.gl/V2ZdN6V9S8nZvpfC9",
-        "doing": "following daily life",
+        "city": "Tokyo, Japan",
+        "citylink": "https://maps.app.goo.gl/b4DADNCmx6F5eKQf8",
+        "doing": "getting better at Japanese 🙃",
         "doinglink": null
     },
     "reading": {
