Update location details in now.json

--- a/src/_data/now.json
+++ b/src/_data/now.json
@@ -1,8 +1,8 @@
 {
     "location": {
-        "city": "Tokyo, Japan",
-        "citylink": "https://maps.app.goo.gl/b4DADNCmx6F5eKQf8",
-        "doing": "getting better at Japanese 🙃",
+        "city": "Mainz, Germany",
+        "citylink": "https://maps.app.goo.gl/t85CGJCd3ttYcnb78",
+        "doing": "following daily life",
         "doinglink": null
     },
     "reading": {
